--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ button {
     font-family: 'Press Start 2P', cursive;
     border-radius: 15px;
     text-align: center;
-    border: 1px dashed #ff9948;
+    border: 1px solid #ff9948;
     box-shadow: inset 1px 1px 1px 1px #ff9948;
     padding: 5px 10px 5px 11px;
+    height: 32px;
 }
