--- a/game.css
+++ b/game.css
@@ -15,7 +15,7 @@ h1 {
 	border: 5px solid #ff9948;
 	height: 500px;
     width: 700px;
-    position: relative;
+    position: absolute;
     
 }
 
@@ -24,11 +24,21 @@ h1 {
     position: absolute;
     width: 20px;
     height: 20px;
-    right: 0px;
+    right: 200px;
     left: 330px;
-    bottom: 0px;
+    bottom: 200px;
     top: 350px;
 }
+
+/*#test {
+    background-color: #fff351;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: 200px;
+    left: 330px;
+    bottom: 200px
+}*/
 
 #startGame {
 	position: absolute;
@@ -67,6 +77,7 @@ h1 {
     top: 55px;
     right: 530px;
     left: 150px;
+    margin-top: 17px;
 
 }
 
@@ -100,5 +111,27 @@ h1 {
     width: 134px;
     height: 20px;
     display: none;
+}
+
+#reload:hover {
+    background-color: #ff9948;
+    color: black;
+}
+
+#reload:active {
+    background-color: #fff351;
+    color: black;
+    box-shadow: 0 5px black;
+    transform: translateY(2px);
+
+}
+
+.food {
+    background-color: white;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    
+
 }
 
