--- a/game.css
+++ b/game.css
@@ -135,3 +135,22 @@ h1 {
 
 }
 
+.food1 {
+    background-color: white;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    
+
+}
+
+.food2 {
+    background-color: white;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    
+
+}
+
+
