--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 /*styling the body and background*/
 body {
-	color: #080808;
-	font-family: 'Press Start 2P', cursive;
-	text-align: center;
-	margin-top: 300px;
-	background: #FF0048 url("images/snake.png") no-repeat; 
-	background-blend-mode: screen;
-	background-size: 96%;
+	
+    background: #FF0048 url("images/snake.png") no-repeat; 
+    background-blend-mode: screen;
+    background-size: 96%;
     background-position: 
+    color: #080808;
+	font-family: 'Press Start 2P', cursive;
+	margin-top: 300px;
+    text-align: center;
 
 }
 
 /*play button styling*/
 
 button {
+    
     background-color: #080808;
-    color: #ff9948;
-    font-family: 'Press Start 2P', cursive;
     border-radius: 15px;
-    text-align: center;
     border: 1px solid #ff9948;
     box-shadow: inset 1px 1px 1px 1px #ff9948;
-    padding: 5px 10px 5px 11px;
+    color: #ff9948;
+    cursor: pointer;
+    font-family: 'Press Start 2P', cursive;
     height: 32px;
     outline: none;
-    cursor: pointer;
+    padding: 5px 10px 5px 11px;
+    text-align: center;
+    
+    
 }
 
 /*button hover styling*/
@@ -38,6 +42,8 @@ button {
 
 #play:active {
     background-color: #ff9948; 
-    color: black;
     box-shadow: 0 5px black;
-    transform: translat
+    color: black;
+    transform: translate();
+
+}
